Fix color mismatch behind the document type icon.

--- a/loleaflet/css/loleaflet.css
+++ b/loleaflet/css/loleaflet.css
@@ -46,6 +46,7 @@ body {
     margin: 0;
     overflow: hidden;
     overscroll-behavior-y: none; /* disable the pull to reload gesture */
+    background: #efefef;
 }
 
 #presentation-controls-wrapper {
